first draft of objectmapper