@@ -325,8 +325,9 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
                     <configuration>
-                        <source>13</source>
-                        <target>13</target>
+                        <source>17</source>
+                        <target>17</target>
+                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                 </plugin>
 
